k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openai-app
  labels:
    app: openai-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: openai-app
  template:
    metadata:
      labels:
        app: openai-app
    spec:
      containers:
      - name: openai-container
        image: medvijenia/simple-app:1.0
        ports:
        - containerPort: 80
